# clua

./: .gitmodules  CMakeLists.txt  README.md  aa.drawio  main.cpp  main.lua
include/: clua.h
include/abstract/: container.h
include/foundation/: keyboard.h  lua.h  rendering.h  runtime.h  window.h
include/rendering/: element.h  object-buffer.h  shader.h  vertex.h
include/runtime/: game-object-container.h  game-object-handler.h  game-object.h  game-state-container.h  game-state-handler.h  game-state.h
include/runtime/container/: game-state.h
include/runtime/model/: game-state.h
include/utils/: file.h  log.h  string.h
project/: main.lua  player.lua  state-menu.lua
source/: clua.cpp
source/foundation/: keyboard.cpp  lua.cpp  rendering.cpp  runtime.cpp  window.cpp
source/rendering/: object-buffer.cpp  shader.cpp
source/runtime/: game-object-handler.cpp  game-state-container.cpp  game-state-handler.cpp  game-state.cpp
source/runtime/container/: game-state.cpp
source/runtime/model/: game-state.cpp
